css/style3.css
@font-face {
    font-family: 'Roboto Slab';
    src: url('../fonts/RobotoSlab-Medium.woff2') format('woff2'),
        url('../fonts/RobotoSlab-Medium.woff') format('woff'),
        url('../fonts/RobotoSlab-Medium.ttf') format('truetype');
    font-weight: 500;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Roboto Slab';
    src: url('../fonts/RobotoSlab-Bold.woff2') format('woff2'),
        url('../fonts/RobotoSlab-Bold.woff') format('woff'),
        url('../fonts/RobotoSlab-Bold.ttf') format('truetype');
    font-weight: bold;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Roboto Slab';
    src: url('../fonts/RobotoSlab-Regular.woff2') format('woff2'),
        url('../fonts/RobotoSlab-Regular.woff') format('woff'),
        url('../fonts/RobotoSlab-Regular.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

a {
    cursor: url(../img/cursor.cur), default;
    transition: .5s;
    text-decoration: none;
}

html{
    font-size: .8px;
}

*{
    margin: 0;
    padding: 0;
}

body{
    font-family: Arial;
    padding-top: 55rem;
}

header{
    position: fixed;
    top: 0;
    left: 0;
    padding: 18rem 0;
    width: 100%;
    background-color: #1f1f56;
    z-index: 1000;
}

a:hover{
    color: #fd8300;
}

li{
    list-style: none;
}

h1{
    padding-bottom: 27rem;
    font-size: 24rem;
    color: #24242b;
}

h2{
    padding-bottom: 20rem;
    font-size: 14rem;
    line-height: 1.7em;
    color: #24242b;
    font-family: "Roboto Slab";
}

input, textarea{
    padding: 8rem 15rem;
    font-style: italic;
    font-size: 13rem;
    line-height: 1.6em;
}

textarea{
    min-height: 105rem;
    color: #9999a6;
}

label{
    padding-left: 5rem;
}

footer{
    background-color: #ededf5;
    padding: 41rem 0 30rem;
    margin-top: 41rem;
}

.wrapper{
    max-width: 960rem;
    margin: 0 auto;
    padding: 0 15rem;
}

.align_items{
    display: flex;
    align-items: center;
}

.flex_between{
    display: flex;
    justify-content: space-between;
}

.rs{
    font-family: "Roboto Slab";
}

.grey{
    color: #b1b1d2;
}

.six{
    color: #666666;
}

.black{
    color: #25252c;
}

.nav_header{
    font-size: 14rem;
    letter-spacing: 2rem;
    line-height: 1.7em;
}

.black_background{
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.5);
    backdrop-filter: blur(4rem);
    z-index: 2;
}

.list_header{
    position: fixed;
    top: 0;
    left: -100%;
    width: 70vw;
    height: 100vh;
    padding: 30rem 0;
    background-color: #1f1f56;
}

.cancel{
    position: absolute;
    top: 10rem;
    right: 10rem;
}

.cancel a{
    font-size: 30rem;
    color: #b1b1d2;
}

.list_header li{
    padding: 15rem 20rem;
}

.list_header a{
    display: block;
}

.our_houses{
    position: relative;
}

.submenu, .subsubmenu{
    position: absolute;
    display: none;
    width: 100%;
}

.submenu > li{
    position: relative;
}

.submenu a{
    font-size: 12rem;
    letter-spacing: 2rem;
    line-height: 2em;
    color: #25252c;
    background-color: #e3e3eb;
    transition: .5s;
}

.br1{
    border-radius: 3rem 3rem 0 0;
}

.br2{
    border-radius: 0 0 3rem 3rem;
}

.arrow:after{
    content: "";
    position: absolute;
    top: 50%;
    right: 9rem;
    transform: translateY(-50%) rotate(-45deg);
    display: inline-block;
    width: 7px;
    height: 7px;
    border-right: 1px solid #000;
    border-bottom: 1px solid #000;
    transition: .5s;
}

.arrow:hover::after{
    transform: translateY(-5rem) rotate(45deg);
}

.submenu:before{
    content: "";
    display: block;
    position: absolute;
    top: -23rem;
    left: 0;
    height: 23rem;
    width: 100%;
}

.our_houses:hover > .submenu{
    display: block;
    top: calc(100% + 23rem);
    left: -20rem;
}

.submenu a{
    min-width: 125rem;
    padding: 5rem;
}

.arrow{
    border-bottom: 1rem solid #cecedd;
}

.arrow{
    position: relative;
}

.dog:hover > .subsubmenu{
    display: block;
    top: 0;
    left: calc(100% + 32rem);
    padding-left: 5rem;
}

.subsubmenu a{
    border-bottom: 1rem solid #cecedd;
}

.cancelsubsub2 a{
    border: none;
}

.social_nav{
    padding-right: 28rem;
}

.list_social{
    gap: 26rem;
}

.list_social svg{
    fill: #fff;
    transition: .5s;
}

.list_social li:hover svg{
    fill: #fd8300;
}

.burger span{
    display: block;
    height: 4rem;
    margin-bottom: 2rem;
    background-color: #fff;
    border-radius: 3rem;
}

.burger span:first-child {
    width: 30rem;
}

.burger span:nth-child(2) {
    width: 35rem;
}

.burger span:last-child {
    width: 40rem;
}

.header_2{
    padding: 29rem 28rem;
    margin-bottom: 41rem;
    box-shadow: 0 0 5rem rgba(0,0,0,0.1);
}

.header_2 div{
    flex-direction: column;
    gap: 15rem;
}

.tel{
    font-size: 18rem;
    font-weight: bold;
    line-height: 1.3em;
}

.border{
    padding-right: 40rem;
}

.social_media{
    font-size: 16rem;
    line-height: 1.5em;
}

.phone{
    padding-left: 21.5px;
}

.email{
    text-decoration: underline;
}

.cta{
    display: inline-block;
    font-weight: bold;
    padding: 12rem 27rem;
    font-size: 16rem;
    line-height: 1.5em;
    border-radius: 25rem;
    border: 2rem solid #fd8300;
}

.contacts_container{
    padding-bottom: 34rem;
    border-bottom: 1rem solid #e4e4ec;
}

.contacts_container p {
    padding-bottom: 12rem;
}

.ofice .six {
    font-size: 14rem;
    line-height: 1.5em;
}

.ofice .email {
    font-size: 16rem;
    line-height: 1.5em;
}

.consultation .six {
    font-size: 14rem;
    line-height: 1.5em;
}

.details p{
    font-size: 14rem;
    line-height: 1.5em;
}

.veb_forms{
    display: flex;
    flex-direction: row;
    padding-top: 36rem;
    gap: 28rem;
}

.map{
    width: 466rem;
    height: 299rem;
}

.form p {
    font-size: 13rem;
    line-height: 1.6em;
}

.width{
    width: 100%;
}

.nt{
    display: flex;
    flex-direction: row;
    gap: 10rem;
}

.submit{
    padding: 9rem 30rem;
    font-size: 14rem;
    line-height: 1.7em;
    color: #ffffff;
    font-weight: bold;
    border: none;
    border-radius: 30rem;
    background-color: #fd8300;
}

.list_footer{
    font-size: 14rem;
    gap: 11rem;
    line-height: 1.9em;
}

.list_footer a:hover{
    text-decoration: underline;
}

.footer_inside{
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 15rem;
}

.construction{
    font-size: 13rem;
    padding: 17rem 0 15rem;
    color: #9999a6;
    line-height: 1.4em;
    text-align: center;
    background-color: #dcdce6;
}

.logo{
    grid-area: logo;
}

.th{
    grid-area: tel;
}

.sh{
    grid-area: social;
}

.cta_container{
    grid-area: cta;
}

.list1{
    grid-area: list1;
    padding-left: 10rem;
}

.list2{
    grid-area: list2;
}

.tf{
    grid-area: tel2;
}

.sf{
    grid-area: social2;
}

.tf, .sf{
    padding-right: 28rem;
}

@media screen and (min-width: 370px) {
    .footer_inside{
        display: grid;
        grid-template-columns: repeat(2, auto);
        grid-template-areas: 
        "list1 tel2"
        "list2 social2";
    }

    .list1{
        padding-left: 0;
    }
}

@media screen and (min-width: 445px) {
    .footer_inside{
        grid-template-columns: repeat(3, auto);
        grid-template-areas: 
        ". list1 ."
        "social2 list2 tel2";
    }
}

@media screen and (min-width: 660px) {
    .header_2 > div{
        display: grid;
        grid-template-columns: repeat(3, auto);
        grid-template-areas: 
        ". logo ."
        "tel social cta";
    }
}

@media screen and (min-width: 610px) {
    .footer_inside{
        grid-template-columns: repeat(4, auto);
        grid-template-areas:
        "list1 list2 tel2 social2";
    }
}

@media screen and (min-width: 930px) {
    .header_2 > div{
        grid-template-columns: repeat(4, auto);
        grid-template-areas:
        "logo tel social cta";
    }

    .border{
        border-right: 2rem solid #e4e4ec;
    }

    .list_header{
        position: static;
        left: -100%;
        display: flex;
        justify-content: space-between;
        width: auto;
        height: auto;
        padding: 0;
        gap: 27rem;
    }

    .cancel, .black_background, .burger, .cancelsub2, .cancelsubsub2{
        display: none;
    }

    .list_header li{
        padding: 0;
    }

    .dog > a{
        border: none;
    }

    .submenu a:hover{
        color: #fff;
        background-color: #fd8300;
    }

    .arrow:hover::after{
        border-color: #fff;
    }

    .last a{
        border: none;
    }
}

@media screen and (max-width: 930px) {
    header > div{
        display: flex;
        flex-direction: row-reverse;
        justify-content: space-between;
    }

    .submenu a {
        text-align: center;
        padding-bottom: 20rem;
    }

    .submenu, .subsubmenu{
        background-color: #e4e4ec;
    }
}

@media screen and (min-width: 768px) {
    html {
        font-size: 0.93px;;
    }
}

@media screen and (min-width: 1440px) {
    html {
        font-size: 1px;
    }
}

@media screen and (min-width: 2200px) {
    html {
        font-size: 1.5px;
    }
}

